put file names back to normal and upated start script

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
-    <script src="index.js"></script>
+    <script src="todolist.js"></script>
     <script type="module" src="chatbot.js"></script>
   </body>
 </html>
