--- a/src/calendar.html
+++ b/src/calendar.html
@@ -147,6 +147,7 @@
         <h3>Upcoming Tests</h3>
         <button class="close-panel" title="Close Panel">✖</button>
       </div>
+      <ul id="tests-list"></ul>
     </div>
 
     <div id="assignments-panel" class="tab-panel">
@@ -154,6 +155,7 @@
         <h3>Upcoming Assignments</h3>
         <button class="close-panel" title="Close Panel">✖</button>
       </div>
+      <ul id="assignments-list"></ul>
     </div>
 
     <script type="module" src="./User.js"></script>
