adds notification functionality to User.js from calendarScripts.js

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -170,6 +170,7 @@
           await User.loadState();
           // Initialize user state and update auth buttons
           await User.initializeUser();
+          User.initializeNotifications();
         } catch (err) {
           console.error("Error loading calendar page:", err);
         }
