fixed loading gif issue where it wouldnt appear

--- a/quizgen.html
+++ b/quizgen.html
@@ -136,7 +136,7 @@
 
       <div class="loader-position">
         <div class="loader">
-          <img src="/public/duck-walking.gif" id="duck-gif" />
+          <img src="./public/duck-walking.gif" id="duck-gif" />
           <h3>Generating quiz...</h3>
         </div>
       </div>
