--- a/src/calendar.html
+++ b/src/calendar.html
@@ -26,7 +26,7 @@
     <!-- Sidebar for Event Creation and Editing -->
     <div id="event-sidebar" class="event-sidebar">
       <div class="drag-handle">
-        <span class="drag-text">☰ Drag</span>
+        <span class="drag-text">☰</span>
         <button
           id="close-sidebar-button"
           class="close-button"
@@ -35,7 +35,7 @@
           ✖
         </button>
       </div>
-      <h2>Create Event</h2>
+      <h2>Create Primary Calendar Event</h2>
 
       <!-- Title Input -->
       <label for="event-title">Title:</label>
@@ -62,12 +62,6 @@
         name="event-start-time"
         required
       />
-
-      <div>
-        <label>
-          <input type="checkbox" id="all-day-event-checkbox" /> All Day Event
-        </label>
-      </div>
 
       <!-- End Date and Time -->
       <label for="event-end-date">End Date:</label>
