documented index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--main elements -->
     <!-- todolist -->
     <div class="todo-list">
+      <!--Each item in todo list-->
       <h1>To-do List</h1>
       <button class="todo-remove-button" id="remove1">X</button>
       <p id="item1"></p>
@@ -35,6 +36,7 @@
       <p id="item9"></p>
       <button class="todo-remove-button" id="remove10">X</button>
       <p id="item10"></p>
+      <!--inputs for user-->
       <div class="todo-add">
         <input
           class="todo-input-box"
@@ -46,12 +48,13 @@
     </div>
     <!-- todolist end-->
     <!-- chatbot -->
-
     <div class="chatbot">
+      <!--AI response-->
       <h1>AI Help</h1>
       <div class="response-box">
         <p id="response"></p>
       </div>
+      <!--inputs for user-->
       <div class="chatbot-input">
         <input
           class="chatbot-input-box"
