--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <title>Study Buddy</title>
   </head>
   <body style="background-color: #e6e6e6">
