added button icons

--- a/application.html
+++ b/application.html
@@ -1,10 +1,11 @@
 <div id="shared-header">
   <header class="header">
+
     <div class="header-left">
       <div class="menu">
-        <a href="index.html">Home</a>
-        <a href="calendar.html">Calendar</a>
-        <a href="quizgen.html">Quiz</a>
+        <a href="index.html"><img src = "images/homeicon.png" class ="icon">Home</a>
+        <a href="calendar.html"><img src = "images/calendaricon.png" class ="icon">Calendar</a>
+        <a href="quizgen.html"><img src = "images/quizicon.png" class ="icon">Quiz</a>
       </div>
     </div>
 
