resolved remaining merge conflicts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <title>Study Buddy</title>
   </head>
   <body style="background-color: #e6e6e6">
@@ -49,10 +49,7 @@
     <!-- todolist end-->
     <!-- chatbot -->
     <div class="chatbot">
-<<<<<<< HEAD:src/index.html
-=======
       <!--AI response-->
->>>>>>> b33a3938e2b7f57ce8bd29755a0663d6e3d904fa:index.html
       <h1>AI Help</h1>
       <div class="response-box">
         <p id="response"></p>
@@ -78,23 +75,12 @@
           document.getElementById("shared-content").innerHTML = html;
           await User.loadState();
           await User.initializeUser(); // Wait until user state is fully initialized
-<<<<<<< HEAD:src/index.html
           User.initializeNotifications();
-=======
->>>>>>> b33a3938e2b7f57ce8bd29755a0663d6e3d904fa:index.html
         } catch (err) {
           console.error("Error initializing page:", err);
         }
       });
     </script>
-<<<<<<< HEAD:src/index.html
-
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js" async defer></script>
-    <script src="todolist.js"></script>
-    <script type="module" src="chatbot.js"></script>
-=======
->>>>>>> b33a3938e2b7f57ce8bd29755a0663d6e3d904fa:index.html
   </body>
 
   <script src="https://accounts.google.com/gsi/client" async defer></script>
