--- a/application.html
+++ b/application.html
@@ -15,6 +15,7 @@
           href="/docs/Help_And_Documentation.pdf"
           target="_blank"
           title="Help and Documentation File"
+          class="help-and-documentation-button"
           >Help</a
         >
       </div>
