--- a/application.html
+++ b/application.html
@@ -11,12 +11,12 @@
         <a href="quizgen.html"
           ><img src="images/quizicon.png" class="icon" />Quiz</a
         >
-        <a
-          href="/docs/Help_And_Documentation.pdf"
-          target="_blank"
-          title="Help and Documentation File"
-          class="help-and-documentation-button"
-          >Help</a
+        <a href="/docs/Help_And_Documentation.pdf">
+          <img
+            src="images/helpicon.png"
+            class="icon"
+            title="Help and Documentation File"
+          />Help</a
         >
       </div>
     </div>
