--- a/application.html
+++ b/application.html
@@ -11,7 +11,7 @@
         <a href="quizgen.html"
           ><img src="images/quizicon.png" class="icon" />Quiz</a
         >
-        <a href="/docs/Help_And_Documentation.pdf">
+        <a href="/docs/Help_And_Documentation.pdf" target="_blank">
           <img
             src="images/helpicon.png"
             class="icon"
