changed pdf link

--- a/application.html
+++ b/application.html
@@ -11,7 +11,10 @@
         <a href="quizgen.html"
           ><img src="images/quizicon.png" class="icon" />Quiz</a
         >
-        <a href="/docs/Help_And_Documentation.pdf" target="_blank">
+        <a
+          href="cmpt-276-fall-2024.github.io/project-20-waves/docs/Help_And_Documentation.pdf"
+          target="_blank"
+        >
           <img
             src="images/helpicon.png"
             class="icon"
