--- a/application.html
+++ b/application.html
@@ -12,7 +12,7 @@
           ><img src="images/quizicon.png" class="icon" />Quiz</a
         >
         <a
-          href="cmpt-276-fall-2024.github.io/project-20-waves/docs/Help_And_Documentation.pdf"
+          href="https://cmpt-276-fall-2024.github.io/project-20-waves/docs/Help_And_Documentation.pdf"
           target="_blank"
         >
           <img
